--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
         <div id="profile-container">
             <div id="profile">
-                <img id="profile-image" src="ruta_de_la_imagen.jpg" alt="Imagen de perfil">
+                <img id="profile-image" src="proyecto-ml/images/pal-profile.jpg" alt="Imagen de perfil">
                 <div id="profile-name">Nombre</div>
                 <div id="profile-buttons">
                     <button class="follow-button">Follow</button>
