--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div id="profile-container">
             <div id="profile">
                 <img id="profile-image" src="proyecto-ml/images/pal-profile.jpg" alt="Imagen de perfil">
-                <div id="profile-name">Nombre</div>
+                <div id="profile-name">Paul Banks</div>
                 <div id="profile-buttons">
                     <button class="follow-button">Follow</button>
                     <button class="message-button">Messages</button>
